# SCALPEL

./: .gitignore  LICENSE  PLAN_A_PLUS_SMOKE_TEST.md  PLAN_B_hardening.md  README.md  brca1_design.json  pyproject.toml  test_e2e.py  test_efficiency.py  test_spacer_quick.py  tp53_design.json
.claude/: settings.local.json
.github/workflows/: ci.yml
data/: GENOMIC_DATA_DOWNLOAD.md
scalpel/: __init__.py  cli.py  config.py
scalpel/api/: __init__.py  server.py
scalpel/api/static/: app.js  index.html  styles.css
scalpel/benchmark/: __init__.py  validation.py
scalpel/cloning/: __init__.py  oligo_generator.py
scalpel/core/: __init__.py  cache.py  plugin_registry.py  red_flags.py
scalpel/design/: __init__.py  cas_variants.py  spacer_extractor.py
scalpel/design/efficiency/: __init__.py  crispron_model.py  ensemble.py  features.py  rule_based.py
scalpel/genome/: __init__.py  annotations.py  genes.py  reference.py  sequences.py  target_resolver.py
scalpel/genome/species/: human_grch38.yaml  mouse_grcm39.yaml
scalpel/modalities/: __init__.py  activation.py  base.py  base_editor.py  crisproff.py  dual_nickase.py  interference.py  knockout.py  prime_editor.py
scalpel/models/: __init__.py  data_classes.py  enums.py
scalpel/offtarget/: __init__.py  build_index.py  cfd_scorer.py  searcher.py
scalpel/planning/: __init__.py  planner.py
tests/: conftest.py  test_api_integration.py  test_cli_output_contract.py  test_design_api_contract.py  test_efficiency.py  test_ensemble_regression.py  test_modalities.py  test_offtarget_backend.py  test_offtarget_fixtures.py  test_ranking_properties.py  test_spacer.py
