[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scalpel"
version = "0.1.0"
description = "Smart CRISPR Analysis Library for Precision Editing and Locus-targeting"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "upgradingconstantly"}
]
keywords = ["crispr", "grna", "bioinformatics", "gene-editing", "cas9", "scalpel"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyfaidx>=0.7.0",
    "biopython>=1.80",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pandas>=2.0.0",
    "torch>=2.0.0",
    "onnxruntime>=1.15.0",
    "duckdb>=0.9.0",
    "redis>=4.5.0",
    "jinja2>=3.1.0",
    "fastapi>=0.100.0,<0.116.0",
    "uvicorn>=0.22.0,<0.35.0",
    "httpx>=0.24.0,<0.28.0",
    "starlette>=0.27.0,<0.45.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "hypothesis>=6.80.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[project.scripts]
scalpel = "scalpel.cli:app"

[project.urls]
Homepage = "https://github.com/upgradingconstantly/SCALPEL"

[tool.setuptools.packages.find]
where = ["."]
include = ["scalpel*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
